[package]
name = "arcdps"
version = "0.21.0"
authors = ["Zerthox", "Greaka"]
edition = "2021"
description = "Rust bindings for ArcDPS plugins"
repository = "https://github.com/zerthox/arcdps-rs"
rust-version = "1.87.0"
categories = ["api-bindings"]
keywords = ["arcdps", "guild-wars-2", "ffi", "addon", "framework"]
license = "MIT"

[dependencies]
arcdps_codegen = { path = "../arcdps_codegen", optional = true }
arcdps-imgui = { version = "0.8.0", features = ["tables-api"] }
bitflags = "2.8.0"
chrono = { version = "0.4.24", optional = true }
evtc = { path = "../evtc", features = ["realtime"] }
log = { version = "0.4.17", features = ["std"], optional = true }
num_enum = "0.7.0"
serde = { version = "1.0.160", features = ["derive"], optional = true }
strum = { version = "0.27.1", features = ["derive"], optional = true }
windows = { version = "0.61.1", features = [
    "System",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
] }

[features]
default = ["codegen", "panic", "panic_trace", "panic_msgbox", "unwind"]
codegen = ["dep:arcdps_codegen"]
extras = ["arcdps_codegen/extras", "dep:chrono"]
log = ["dep:log"]
panic = []
panic_trace = ["panic"]
panic_msgbox = ["panic"]
serde = ["dep:serde", "evtc/serde", "chrono/serde"]
strum = ["dep:strum", "evtc/strum"]
unwind = ["arcdps_codegen/unwind"]
