[package]
name = "arcdps"
version = "0.23.0"
authors = ["Zerthox", "Greaka"]
edition = "2024"
description = "Rust bindings for ArcDPS plugins"
repository = "https://github.com/zerthox/arcdps-rs"
rust-version = "1.87.0"
categories = ["api-bindings"]
keywords = ["arcdps", "guild-wars-2", "ffi", "addon", "framework"]
license = "MIT"

[dependencies]
arcdps_codegen = { path = "../arcdps_codegen", optional = true }
arcdps-imgui = { version = "0.8.0", features = ["tables-api"] }
arcdps_unofficial_extras = { path = "../arcdps_unofficial_extras", optional = true }
bitflags = { workspace = true }
evtc = { path = "../evtc", features = ["realtime"] }
log = { version = "0.4.17", features = ["std"], optional = true }
num_enum = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
strum = { workspace = true, features = ["derive"], optional = true }
windows = { workspace = true, features = [
    "System",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
] }

[features]
default = ["codegen", "panic", "panic_trace", "panic_msgbox", "unwind"]
codegen = ["dep:arcdps_codegen"]
extras = ["dep:arcdps_unofficial_extras", "arcdps_codegen/extras"]
log = ["dep:log"]
panic = []
panic_trace = ["panic"]
panic_msgbox = ["panic"]
serde = ["dep:serde", "evtc/serde", "arcdps_unofficial_extras/serde"]
strum = ["dep:strum", "evtc/strum", "arcdps_unofficial_extras/strum"]
unofficial_extras = ["extras"]
unwind = ["arcdps_codegen/unwind"]
