[package]
name = "arcdps_codegen"
version = "0.10.1"
authors = ["Zerthox", "Greaka"]
edition = "2021"
description = "Helper macro to generate code for ArcDPS plugins"
repository = "https://github.com/zerthox/arcdps-bindings"

[lib]
proc-macro = true

[dependencies]
cfg-if = "1.0.0"
paste = "1.0.12"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.14", features = ["full"] }

[features]
unwind = []
extras = []
