[package]
name = "arcdps_evtc"
version = "0.4.2"
authors = ["Zerthox"]
edition = "2021"
description = "Rust bindings for the ArcDPS EVTC API"
repository = "https://github.com/zerthox/arcdps-bindings"

[dependencies]
num_enum = "0.6.0"
serde = { version = "1.0.160", features = ["derive"], optional = true }
strum = { version = "0.24.1", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5.1"
