[package]
name = "arcdps_parse"
version = "0.1.0"
authors = ["Zerthox"]
edition = "2021"
description = "Parsing for ArcDPS EVTC logs"
repository = "https://github.com/zerthox/arcdps-bindings"

[dependencies]
arcdps_evtc = { path = "../arcdps_evtc" }
byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0.38"
