[package]
name = "arcdps-codegen"
version = "0.8.0"
authors = ["Zerthox", "Greaka"]
edition = "2021"
description = "Macros helpers to generate code for ArcDPS plugins."
repository = "https://github.com/zerthox/arcdps-bindings"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
paste = "1.0"
syn = { version = "1.0", features = ["full"] }
