[package]
name = "arcdps-codegen"
version = "0.9.0"
authors = ["Zerthox", "Greaka"]
edition = "2021"
description = "Macros to generate code for ArcDPS plugins."
repository = "https://github.com/zerthox/arcdps-bindings"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
cfg-if = "1.0"
paste = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[features]
extras = []
