[package]
name = "arcdps"
version = "0.8.0"
authors = ["Zerthox", "Greaka"]
edition = "2018"
description = "Rust bindings for the Guild Wars 2 DPS-meter."
repository = "https://github.com/zerthox/arcdps-bindings"
categories = ["api-bindings"]
keywords = ["arcdps", "guild-wars-2", "ffi", "addon", "framework"]
license = "MIT/Apache-2.0"

[dependencies]
once_cell = "1.4"
arcdps-codegen = { path = "../codegen" }
arcdps-imgui = { version = "0.8", features = ["tables-api"] }
log = { version = "0.4", optional = true, features = ["std"] }

[features]
default = ["log"]
