[package]
name = "arcdps"
version = "0.8.0"
authors = ["Zerthox", "Greaka"]
edition = "2021"
description = "Rust bindings for the Guild Wars 2 DPS-meter."
repository = "https://github.com/zerthox/arcdps-bindings"
categories = ["api-bindings"]
keywords = ["arcdps", "guild-wars-2", "ffi", "addon", "framework"]
license = "MIT/Apache-2.0"

[dependencies]
arcdps-codegen = { path = "../codegen" }
arcdps-imgui = { version = "0.8", features = ["tables-api"] }
num_enum = "0.5"
serde = { version = "1.0", features = ["derive"], optional = true }
strum = { version = "0.24", features = ["derive"], optional = true }

[dependencies.windows]
version = "0.39"
features = [
    "System",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader"
]

[features]
default = []
extras = ["arcdps-codegen/extras"]
