[package]
name = "evtc"
version = "0.9.2"
authors = ["Zerthox"]
edition = "2021"
description = "Rust bindings for the ArcDPS EVTC API"
repository = "https://github.com/zerthox/arcdps-rs"

[dependencies]
bitflags = "2.4.2"
memoffset = "0.9.0"
num_enum = "0.7.0"
serde = { version = "1.0.160", features = ["derive"], optional = true }
strum = { version = "0.26.1", features = ["derive"], optional = true }
windows-core = "0.59.0"

[dev-dependencies]
approx = "0.5.1"

[features]
realtime = []
serde = ["dep:serde", "bitflags/serde"]
strum = ["dep:strum"]
