[package]
name = "evtc"
version = "0.12.0"
authors = ["Zerthox"]
edition = "2021"
description = "Rust bindings for the ArcDPS EVTC API"
repository = "https://github.com/zerthox/arcdps-rs"
rust-version = "1.87.0"

[dependencies]
bitflags = "2.4.2"
memoffset = "0.9.0"
num_enum = "0.7.0"
serde = { version = "1.0.160", features = ["derive"], optional = true }
strum = { version = "0.27.0", features = ["derive"], optional = true }
windows-core = "0.61.2"

[dev-dependencies]
approx = "0.5.1"

[features]
realtime = []
serde = ["dep:serde", "bitflags/serde"]
strum = ["dep:strum"]
