[package]
name = "evtc"
version = "0.15.0"
authors = ["Zerthox"]
edition = "2024"
description = "Rust bindings for the ArcDPS EVTC API"
repository = "https://github.com/zerthox/arcdps-rs"
rust-version = "1.87.0"

[dependencies]
bitflags = { workspace = true }
memoffset = "0.9.0"
num_enum = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
strum = { workspace = true, features = ["derive"], optional = true }
windows-core = "0.62.2"

[dev-dependencies]
approx = "0.5.1"

[features]
log = []
realtime = []
serde = ["dep:serde", "bitflags/serde"]
strum = ["dep:strum"]
