[package]
name = "evtc_dump"
version = "0.1.3"
authors = ["Zerthox"]
edition = "2021"
description = "Dump ArcDPS EVTC log information"
repository = "https://github.com/zerthox/arcdps-rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
evtc_parse = { path = "../evtc_parse", features = ["serde", "zevtc"] }
serde = "1.0.188"
serde_json = "1.0.107"
strum = { version = "0.27.1", features = ["derive"] }
