[package]
name = "evtc_dump"
version = "0.2.0"
authors = ["Zerthox"]
edition = "2024"
description = "Dump ArcDPS EVTC log information"
repository = "https://github.com/zerthox/arcdps-rs"
rust-version = "1.87.0"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
evtc_parse = { path = "../evtc_parse", features = ["serde", "zevtc"] }
serde = { workspace = true }
serde_json = "1.0.107"
strum = { workspace = true, features = ["derive"] }
