[package]
name = "evtc_parse"
version = "0.7.1"
authors = ["Zerthox"]
edition = "2021"
description = "Parsing for ArcDPS EVTC logs"
repository = "https://github.com/zerthox/arcdps-rs"

[dependencies]
evtc = { path = "../evtc" }
byteorder = "1.4.3"
serde = { version = "1.0.160", features = ["derive"], optional = true }
thiserror = "1.0.38"
zip = { version = "0.6.4", optional = true }

[features]
serde = ["dep:serde", "evtc/serde"]
zevtc = ["dep:zip"]
zip = ["zevtc"]
