[package]
name = "evtc_parse"
version = "0.9.0"
authors = ["Zerthox"]
edition = "2021"
description = "Parsing for ArcDPS EVTC logs"
repository = "https://github.com/zerthox/arcdps-rs"

[dependencies]
evtc = { path = "../evtc" }
byteorder = "1.4.3"
serde = { version = "1.0.160", features = ["derive"], optional = true }
thiserror = "1.0.38"
zip = { version = "2.1.3", optional = true }

[features]
default = ["zevtc"]
serde = ["dep:serde", "evtc/serde"]
zevtc = ["dep:zip"]
zip = ["zevtc"]
