[package]
name = "evtc_parse"
version = "0.11.0"
authors = ["Zerthox"]
edition = "2021"
description = "Parsing for ArcDPS EVTC logs"
repository = "https://github.com/zerthox/arcdps-rs"
rust-version = "1.87.0"

[dependencies]
evtc = { path = "../evtc" }
byteorder = "1.4.3"
serde = { version = "1.0.160", features = ["derive"], optional = true }
thiserror = "2.0.3"
zip = { version = "4.0.0", optional = true }

[features]
default = ["zevtc"]
serde = ["dep:serde", "evtc/serde"]
zevtc = ["dep:zip"]
zip = ["zevtc"]
